--- a/package.json
+++ b/package.json
@@ -42,8 +42,14 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
-    "prettier": "^2.6.2"
+    "lint-staged": ">=10",
+    "prettier": "2.6.2"
+  },
+  "lint-staged": {
+    "*.{js,css,md,ts,tsx}": "prettier --write"
   }
 }
