--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "lint-staged": ">=10",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "sass": "^1.52.2"
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
